@@ -105,6 +105,18 @@ int ehbi_bytes_shift_left(struct ehbigint *bi, size_t num_bytes);
 int ehbi_bytes_shift_right(struct ehbigint *bi, size_t num_bytes);
 
 /*
+   shifts the value of the ehbigint up by num_bits number of bits
+   returns 0 on success or error_code on error
+*/
+int ehbi_shift_left(struct ehbigint *bi, unsigned long num_bits);
+
+/*
+   shifts the value of the ehbigint down by num_bits number of bits
+   returns 0 on success or error_code on error
+*/
+int ehbi_shift_right(struct ehbigint *bi, unsigned long num_bits);
+
+/*
    populates the first ehbigint quotient and remainder with the results
    of the numerator divided by the denominator
    returns 0 on success or error_code on error
